--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -6,7 +6,7 @@ tags: "leadership, strategy, people"
 date: "January 1, 2017"
 ogType: "business.business"
 customCSS: "about-us"
-layout: company
+layout: products
 timeline_company:
   -
     date: 'May 2013'
@@ -90,15 +90,48 @@ stats_list:
     desc: "We're built on open source, and provide deep educational resources"
     url: "/academy/"
     width: 200
+category: "Company"
+navTitle: "About"
+subnav:
+  -
+    title: "About us"
+    slug: "about"
+  -
+    title: "Leadership Team"
+    slug: "leadership"
+  -
+    title: "By the numbers"
+    slug: "stats"
+  -
+    title: "Careers"
+    slug: "careers"
 ---
 scss:
   .display-block {
     display: block;
     margin: 0.5rem 0;
   }
+  .subnav {
+    opacity: 0;
+    transition: opacity .2s, background-color .2s, box-shadow .2s;
+  }
+  .subnav.is-stuck {
+    opacity: 1;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  }
+  .breadcrumbs li:nth-child(2) { // hide second level in crumbs
+    display: none;
+  }
 
 .bg-gray-12.container-image-fill.lozad data-background-image=bg_product_light
-  section.section-article#top
+  nav.nav.nav-desktop.show-for-large.full-width data-theme="none" 
+    ul.menu.horizontal.align-center.menu-secondary
+      = partial "partials/snippets/nav-sub-company", :locals => { :class_li => "menu-item", :class_a => "menu-header menu-item--link" }
+
+  = partial "partials/snippets/nav-sub-product", :locals => { :parent_label => "Company", :parent_url => "/" }
+
+  section.section-article id=current_page.data.subnav[0].slug data-magellan-target=current_page.data.subnav[0].slug
     .row.align-center
       .columns.small-12.large-8.text-center
         h1.headline-5.spaced-out About Datica
@@ -106,7 +139,7 @@ scss:
     .row.align-center.group
       .columns.small-12.medium-8.large-8.text-center.group
         p.lead Datica was formed in 2013 to help healthcare technology companies move to the cloud. We help our customers <a class="" href="/cloud-compliance" title="Read more about cloud compliance">achieve HIPAA compliance</a>, <a class="" href="/ehr-integration" title="Learn about EHR integration">integrate securely</a> with hospitals and EHRs, and focus on what they're best at — without worrying about compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment.
-    .row.align-center
+    .row.align-center.group
       .columns.small-12.large-10
         .collection
           .row.group.align-center.align-middle
@@ -156,66 +189,74 @@ scss:
             .columns.small-5.medium-3
               /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/Wya4eSOBXCvaLlatIZN4y/231f374a3323172870f7bcf6b32e5cc1/100m_records.png"
 
-
-  /section.section-article
     .row.align-center
-      .columns.small-12.medium-10.large-7
-        h5.spaced-out.text-center Datica By the Numbers
-    .row.align-center.align-middle.small-up-3.medium-up-4.large-up-7
-      - current_page.data.stats_list.each do | stat |
-        .column
-          - if stat.url != ""
-            a href=stat.url title=stat.desc
-              img.lozad width=stat.width data-src=stat.image alt=stat.desc
-          - else
-              img.lozad width=stat.width data-src=stat.image alt=stat.desc
+      .columns.small-12.large-11.text-center
+        h3.headline-3 <strong>World-class companies</strong> trust Datica
+        .logo-cloud.grayscale
+          - data.views.home.customers.each do |logo| # trying this as data-interchange for perf
+            img alt="#{logo["name"]}" class=("lozad logo-cloud--item logo-size--#{logo['logoSize']}") data-src="/public/img/customer-logos/sm/#{logo['file']}.png" /
 
-section.section-article.bg-gray-12
-  .row.align-center
-    .columns.small-12.medium-8.large-7
-      h5.spaced-out.text-center Milestones
-      #timeline.timeline--vertical
-        #line.line
-        - current_page.data.timeline_company.each do | item |
-          .block
-            .date
-              span
-                = Kramdown::Document.new(item.date).to_html
-            span.dot
-            .content
-              = Kramdown::Document.new(item.body).to_html
-    .columns.small-12.medium-4.large-3.text-center
-      - current_page.data.stats_list.each do | stat |
-        .group
-          - if stat.url != ""
-            a href=stat.url title=stat.desc
-              img.lozad width=stat.width data-src=stat.image alt=stat.desc
-          - else
-              img.lozad width=stat.width data-src=stat.image alt=stat.desc
+
 
 /.strip.strip-bright
-section.section-article.bg-white.drop--big
-  - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
-  - execs.each do | id, collection |
-    .row.align-center
-      .columns.small-12.medium-8.large-6.text-center.group
-        h2.headline-4.spaced-out = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
-        /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
-    .row.align-center.small-up-2.medium-up-3.large-up-5
-      - collection["related_entries"].each do | person |
+.bg-gray-12 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
+  section.section-article.bg-white.drop
+    - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
+    - execs.each do | id, collection |
+      .row.align-center
+        .columns.small-12.medium-8.large-6.text-center.group
+          h2.headline-5.spaced-out = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
+          /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
+      .row.align-center.small-up-2.medium-up-3.large-up-5
+        - collection["related_entries"].each do | person |
+          .column
+            = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
+      .row
         .column
-          = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
-          /.person-simple
-            a href="/about/#{person.slug}" title="Learn more about #{person.fullname}"
-              img.lozad.avatar.avatar--large-mid.circle src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="#{person.profile_pic.url}?f=face&fit=thumb&fm=jpg&fl=progressive&w=250&h=250&fm=jpg&q=60" alt=person.fullname
-    .row.group--2x
-      .column
-        .button-group.align-center
-          = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button secondary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
+          .button-group.align-center
+            = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button secondary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
 
+
+    /section.section-article
+      .row.align-center
+        .columns.small-12.medium-10.large-7
+          h5.spaced-out.text-center Datica By the Numbers
+      .row.align-center.align-middle.small-up-3.medium-up-4.large-up-7
+        - current_page.data.stats_list.each do | stat |
+          .column
+            - if stat.url != ""
+              a href=stat.url title=stat.desc
+                img.lozad width=stat.width data-src=stat.image alt=stat.desc
+            - else
+                img.lozad width=stat.width data-src=stat.image alt=stat.desc
+
+  section.section-article id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
+    .row.align-center
+      .columns.small-12.medium-8.large-7
+        h5.spaced-out.text-center Milestones
+        #timeline.timeline--vertical
+          #line.line
+          - current_page.data.timeline_company.each do | item |
+            .block
+              .date
+                span
+                  = Kramdown::Document.new(item.date).to_html
+              span.dot
+              .content
+                = Kramdown::Document.new(item.body).to_html
+      .columns.small-12.medium-4.large-3.text-center
+        - current_page.data.stats_list.each do | stat |
+          .group
+            - if stat.url != ""
+              a href=stat.url title=stat.desc
+                img.lozad width=stat.width data-src=stat.image alt=stat.desc
+            - else
+                img.lozad width=stat.width data-src=stat.image alt=stat.desc
+
+section.section-article.bg-white.drop--big
   .row.align-center
     .columns.small-12.medium-8.text-center
-      h2.headline-4.spaced-out.group A Strong Backing
+      h2.headline-5.spaced-out.group A Strong Backing
       .row.small-up-2.medium-up-4.align-middle
         .column
           img.logo-size--large.img-crisp.lozad alt=("Arthur Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=120" /
@@ -227,7 +268,7 @@ section.section-article.bg-white.drop--big
           img.logo-size--large.img-crisp.lozad alt=("Lewis and Clark Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" /
 
 
-section.bg-gray-3.container-image--center.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/5sg4ICUpO4m4eX5nAwerir/abc651f00fcedcfba995a551804067d9/Datica_cities_-_live_where_you_want.jpg?w=1600" style="border: 10px solid black;"
+section.bg-gray-3.container-image--center.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/5sg4ICUpO4m4eX5nAwerir/abc651f00fcedcfba995a551804067d9/Datica_cities_-_live_where_you_want.jpg?w=1600" style="border: 10px solid black;" id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
   .section-article.container-color--tint-20
     .row.align-center
       .columns.small-12.medium-10.large-9.text-center
