Fix for bad icon paths in CSS; these are better as data-uri's anyway. Layout tweak on mobile.

--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -143,7 +143,7 @@ scss:
       .columns.small-12.large-10
         .collection
           .row.group.align-center.align-middle
-            .columns.small-7.medium-8
+            .columns.small-12.medium-10.large-8
               h2.headline-5.spaced-out.text-light Why We Exist
               h3.headline-4 Empowering Digital Health Success
               p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in the healthcare space. By removing compliance as a concern, we help our customers focus on what they do best.
@@ -151,14 +151,14 @@ scss:
               /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/7Cbcr7jzlDNIOpuGiehpwI/1088af53aed696ee3da57e9d3ff9a51e/3x_growth.png"
 
           .row.group.align-center.align-middle
-            .columns.small-7.medium-8
+            .columns.small-12.medium-10.large-8
               h2.headline-5.spaced-out.text-light What We Are
               h3.headline-4 The Most Secure and Compliant Infrastructure Possible
               p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and the customer application. In another words, the operating system layer of cloud native architectures. We solve that by helping customers address attestation responsibilities with a suite of products built to fit the specific use case on the cloud.
             .columns.small-5.medium-3
               /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/0tDICrmYSfsnYSzn1gzgR/f1beb7b7b789030a72cd0396239f5945/us_eu.png"
           .row.group.align-center.align-middle
-            .columns.small-7.medium-8
+            .columns.small-12.medium-10.large-8
               h2.headline-5.spaced-out.text-light How We Do It
               h3.headline-4 Best Practices are Best Practices
               img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" width="180" /
@@ -167,7 +167,7 @@ scss:
               /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/3T2aDxazGShZJVKW0xSKtD/bfc6aa50e70bf27f3815bcb22c828470/17_events.png"
 
           .row.group.align-center.align-middle
-            .columns.small-7.medium-8
+            .columns.small-12.medium-10.large-8
               h2.headline-5.spaced-out.text-light How We Create Value
               h3.headline-4 Compliance Breeds Innovation
               img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
@@ -176,7 +176,7 @@ scss:
               /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/6qs1qJbcBXtYj8xt2fjFnk/b948c2e6ccf1614cf5df86fd306f66c3/partners.png"
 
           .row.group.align-center.align-middle
-            .columns.small-7.medium-8
+            .columns.small-12.medium-10.large-8
               h2.headline-5.spaced-out.text-light What We Believe
               h3.headline-4 Trust Is Earned
               ul
