--- a/source/careers/index.html.slim
+++ b/source/careers/index.html.slim
@@ -22,6 +22,10 @@ subnav:
     title: "Careers"
     slug: "careers"
 ---
+ruby:
+  first_image = "https://images.ctfassets.net/189dvqdsjh46/1T4yN0IbMwIf43G9mHIF2b/c908b04c35bd79f1d051902d429e208b/Datica_cities_-_cluster.jpg"
+  current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/tuYNdE8PeutFMbcu4Lhqy/d64de3b29eb1643862ed61f7006378d9/careers-share.jpg?q=40"
+  current_page.data.asset_preload = '<link href="' + first_image + '" rel="preload" as="image" />'
 scss:
   $minty:      #00e4c3;
   $minty-dark: #009fa2;
@@ -59,13 +63,13 @@ scss:
     .collection
       .row.align-center.align-middle.group--2x
         .columns.small-12.large-6
-          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/1T4yN0IbMwIf43G9mHIF2b/c908b04c35bd79f1d051902d429e208b/Datica_cities_-_cluster.jpg?w=576&q=5" data-src="https://images.ctfassets.net/189dvqdsjh46/1T4yN0IbMwIf43G9mHIF2b/c908b04c35bd79f1d051902d429e208b/Datica_cities_-_cluster.jpg?w=800" alt="Datica Careers"
+          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/5plPYDbEUhfg7c7WcUf0j/ce88e74ee3dbf1965cb457a991f99cbf/Datica_cities_-_cluster_-_preview.svg" data-src="#{first_image}?w=800" alt="Datica Careers"
         .columns.small-12.large-6
           h3.headline-4 Remote from the ground up.
           p.lead Datica is a fully remote company, inside and out. Our team is all over the US, with clusters in Denver, San Francisco, Portland, and offices in Madison, WI and Seattle. We are looking for the best people in their fields — no matter where you are.
       .row.align-center.align-middle.group--2x
         .columns.small-12.large-7
-          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/cR8cpADTHP4pVZq9J3rnC/07ab1075b6e4eafe1cd0a0f111325229/Datica_tools.jpg?w=640&q=5" data-src="https://images.ctfassets.net/189dvqdsjh46/cR8cpADTHP4pVZq9J3rnC/07ab1075b6e4eafe1cd0a0f111325229/Datica_tools.jpg?w=800" alt="Datica Careers"
+          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/4DdyNoJa6sEDSwhxTxnkNF/e055474ddb03882cdac59c5bf62711ee/Datica_tools_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/cR8cpADTHP4pVZq9J3rnC/07ab1075b6e4eafe1cd0a0f111325229/Datica_tools.jpg?w=800" alt="Datica Careers"
         .columns.small-12.large-5
           h3.headline-4 Hard problems. The right tools.
           p.lead We use the latest tools for a modern, distributed workforce, to solve the hard problems of healthcare.
@@ -83,7 +87,7 @@ scss:
 
       .row.align-center.align-middle
         .columns.small-12.large-6
-          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?w=561&q=5" data-src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?w=800" alt="Datica Careers"
+          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/24l7Rg3yevglHqcDulsUew/9fb2e36bc2cbafe197d3e1cda243552c/Datica_people_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?w=800" alt="Datica Careers"
         .columns.small-12.large-6
           h3.headline-4 Decent folk who work hard and care about each other.
           p.lead Daticans get together at least once a year and more frequently in regional teams. We believe people do their best work when they're taken care of and work in a positive environment. 
