--- a/source/contentful_templates/podcast.html.erb
+++ b/source/contentful_templates/podcast.html.erb
@@ -79,30 +79,28 @@ end
         <div class="columns small-12 large-8">
             <article class="content-dynamic">
                 <div class="section--body group"><%= Kramdown::Document.new(p["post"]).to_html %></div>
-                <div class="row callout--gray-light">
-                       <% if p.has_key?("guest") %>
-                           <div class="columns small-12 medium-6">
-
-                                   <h3 class="headline-5 text-center">Today's Guest</h3>
-                                   <%= partial("partials/snippets/person", :locals => { :p => p["guest"] }) %>
-                                   <% if p["guest"].has_key?("bio_short") %>
-                                       <%= Kramdown::Document.new(p["guest"]["bio_short"]).to_html %>
-                                   <% end %>
-                                   <% if p["guest"].has_key?("bio") %>
-                                       <%= Kramdown::Document.new(p["guest"]["bio"]).to_html %>
-                                   <% end %>
+                <div class="callout--gray-light">
+                     <% if p.has_key?("guest") %>
+                           <h3 class="headline-5 text-center">Today's Guest</h3>
+                           <%= partial("partials/snippets/person", :locals => { :p => p["guest"] }) %>
+                           <div class="text-small">
+                           <% if p["guest"].has_key?("bio_short") %>
+                               <%= Kramdown::Document.new(p["guest"]["bio_short"]).to_html %>
+                           <% end %>
+                           <% if p["guest"].has_key?("bio") %>
+                               <%= Kramdown::Document.new(p["guest"]["bio"]).to_html %>
+                           <% end %>
                            </div>
-                       <% end %>
-                       <% if p.has_key?("author") %>
-                           <div class="columns small-12 medium-6">
-
-                                   <h3 class="headline-5 text-center">Our Interviewer</h3>
-                                   <%= partial("partials/snippets/person", :locals => { :p => p["author"] }) %>
-                                   <% if p["author"].has_key?("bio_short") %>
-                                       <%= Kramdown::Document.new(p["author"]["bio_short"]).to_html %>
-                                   <% end %>
-                           </div>
-                       <% end %>
+                     <% end %>
+                     <% if p.has_key?("author") %>
+                           <h3 class="headline-5 text-center">Our Interviewer</h3>
+                           <%= partial("partials/snippets/person", :locals => { :p => p["author"] }) %>
+                           <% if p["author"].has_key?("bio_short") %>
+                           <div class="text-small">
+                               <%= Kramdown::Document.new(p["author"]["bio_short"]).to_html %>
+                             </div>
+                           <% end %>
+                     <% end %>
                </div>
                <% if p.has_key?("cta_ref") %>
                    <%= partial("/partials/content/cta", :locals => { :p => p["cta_ref"] }) %>
