Added mix-blend-mode to img-multiply and image-overlay.
let's see if that works. check /press, /webinars, /ccms

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -433,11 +433,13 @@ $button-transition: transform $timing-default ease, box-shadow $timing-default e
 @mixin blend-multiply {
     @supports (background-blend-mode: multiply) {
         background-blend-mode: multiply;
+        mix-blend-mode: multiply;
     }
 }
 @mixin blend-overlay {
     @supports (background-blend-mode: overlay) {
         background-blend-mode: overlay;
+        mix-blend-mode: overlay;
     }
 }
 @mixin abs-topleft { // less typing 
