Trip info ~ fuzzified on /careers

--- a/source/careers/index.html.slim
+++ b/source/careers/index.html.slim
@@ -108,7 +108,7 @@ scss:
           img.lozad src="https://images.ctfassets.net/189dvqdsjh46/24l7Rg3yevglHqcDulsUew/60929c3e09c158cd7005174909103162/Datica_people_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?fm=jpg&fl=progressive&w=800" alt="Datica Careers"
         .columns.small-12.medium-8.large-5
           h3.headline-4 Decent folk who work hard and care about each other.
-          p.lead Daticans get together at least once a year and more frequently in regional teams. We believe people do their best work when they're taken care of and work in a positive environment. 
+          p.lead Relationships matter. We build trust with each other online and off. Daticans try to get together once a year or so, and more frequently in regional teams. We believe people do their best work when they're taken care of and work in a positive environment. 
           h4.headline-6.spaced-out Benefits
           ul.list-check
             li Medical and Dental Plan, Datica covers 100% of single premiums, and the majority of premiums for family coverage.
