unmixing mix-blend and blend-background
These work differently. Use mix-blend directly on images. It seems. Separated out, you can see on /press and /webinar/[detail] views.

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -433,12 +433,20 @@ $button-transition: transform $timing-default ease, box-shadow $timing-default e
 @mixin blend-multiply {
     @supports (background-blend-mode: multiply) {
         background-blend-mode: multiply;
-        mix-blend-mode: multiply;
     }
 }
 @mixin blend-overlay {
     @supports (background-blend-mode: overlay) {
         background-blend-mode: overlay;
+    }
+}
+@mixin mix-multiply {
+    @supports (mix-blend-mode: multiply) {
+        mix-blend-mode: multiply;
+    }
+}
+@mixin mix-overlay {
+    @supports (mix-blend-mode: overlay) {
         mix-blend-mode: overlay;
     }
 }
