--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -86,7 +86,7 @@ feed_url: "https://datica.com/press/feed.xml"
                 <% if quote.has_key?("source_logo") %>
                     <p>
                     <a class="blockquote-info" href="<%= quote["url"] %>" title="Read the article on their website">
-                        <img class="logo-size--medium img-multiply" src="<%= quote.source_logo.url %>" alt="<%= quote["source"] %>">
+                        <img class="logo-size--medium img-mix-multiply" src="<%= quote.source_logo.url %>" alt="<%= quote["source"] %>">
                     </a></p>
                 <% end %>
                 <% if quote.has_key?("source") %>
