--- a/source/innovation/series/2019-predictions/index.html.slim
+++ b/source/innovation/series/2019-predictions/index.html.slim
@@ -7,41 +7,56 @@ ruby:
   series = data.site.collections.to_a.select { |id, entry | (id == "4J4i2RsfnFJu7fDYA8XjTi") }
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/2aPhdyH76MiQwqQq4KiGMg/186518b5a3896994d54ae3cef4fbac8d/cta-compliance-share.jpg"
-  featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg"
-.container-gray-2#top
-  .container-color--tint-20.faded-max.group
-    = partial "partials/head/header", :locals => { :style => "light" }
-  section.section-article
-    - series.each do | id, collection |
-      - current_page.data.title = collection.title + ' | Datica'
-      - current_page.data.summary = (collection.summary? ? collection.summary : 'A curated collection of writing from our Datica exprerts.')
+scss:
+  .art-bg-fill {
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+  }
+  .gradient-dusk {
+    background: linear-gradient(180deg, #262936 0%, #465365 23.05%, #43606B 69.96%, #5B515C 83.54%, #544745 94.86%);
+  }
+- series.each do | id, collection |
+  - current_page.data.title = collection.title + ' | Datica'
+  - current_page.data.summary = (collection.has_key?("summary") ? collection.summary : 'A curated collection of writing from our Datica experts.')
+  - bg_image = (collection.has_key?("featured_image") ? collection.featured_image.url : 'https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg')
+
+  .container-gray-2.bg-dark.gradient-dusk.product-cmi.relative
+    .z-0.absolute.art-bg-fill.container-image--center.lozad.img-mix-multiply data-background-image="#{bg_image}?w=1200&h=1200"
+    .container-color--tint-20.faded-max.group.relative.z-10
+      = partial "partials/head/header", :locals => { :style => "light" }
+    section.section-article--lg.z-10.relative
+      .row.align-center.group--2x
+        .columns.small-12.large-6.text-center
+          - if collection.has_key?("icon_slug")
+            = inline_svg(collection.icon_slug, :class => "icon-size--xlarge")
+          h1.headline-2 = collection.title
+          h4.headline-4 = (collection.has_key?("subhead") ? collection.subhead : nil)
       .row.align-center
-        .columns.small-12.large-8.text-center
-          h1.headline-3 = collection.title
-          h4.headline-5 = (collection.has_key?("subhead") ? collection.subhead : nil)
+        .columns.small-12.medium-large-6.large-4
           - if collection.has_key?("desc")
-            = Kramdown::Document.new(collection.desc).to_html
+            .group
+              = Kramdown::Document.new(collection.desc).to_html
         - if collection.has_key?("related_form")
           #guide-form.columns.small-12.medium-large-6.large-4
             .callout.drop
               h3.headline-4.text-center.group Read #{collection.title}
               = partial "partials/snippets/form", :locals => { :the_form => collection["related_form"]["custom_form"] }
-
-      /- collection["related_entries"].each do | entry |
-        - type = entry._meta.content_type_id
-        - folder = case type
-        - when "guides" then "guide"
-        - else type
-        - url = "/#{folder}/#{entry.slug}/"
-        .row.align-center
-          .columns.small-12.medium-10.large-6
-            - case type
-            - when "blog"
-              - if entry.has_key?("featured_image")
-                - image = data.site.blog[entry.id].featured_image.url
-                a href=url title=entry.title
-                  img.lozad.thumbnail.blur-in src="#{image}?fit=thumb&w=800&h=400&q=10" data-src="#{image}?fit=thumb&w=800&h=400"
-              h3.headline-4
-                a href=url title=entry.title
-                  = entry.title
-              p = (entry.has_key?("summary") ? entry.summary : nil)
+        /- collection["related_entries"].each do | entry |
+          - type = entry._meta.content_type_id
+          - folder = case type
+          - when "guides" then "guide"
+          - else type
+          - url = "/#{folder}/#{entry.slug}/"
+          .row.align-center
+            .columns.small-12.medium-10.large-6
+              - case type
+              - when "blog"
+                - if entry.has_key?("featured_image")
+                  - image = data.site.blog[entry.id].featured_image.url
+                  a href=url title=entry.title
+                    img.lozad.thumbnail.blur-in src="#{image}?fit=thumb&w=800&h=400&q=10" data-src="#{image}?fit=thumb&w=800&h=400"
+                h3.headline-4
+                  a href=url title=entry.title
+                    = entry.title
+                p = (entry.has_key?("summary") ? entry.summary : nil)
