--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -455,3 +455,28 @@ $button-transition: transform $timing-default ease, box-shadow $timing-default e
     top: 0;
     left: 0;
 }
+@mixin link-anchor { // use within an <a> statement to get a hover anchor icon
+    position: relative;
+    &::before { // em widths are proportional to header sizes
+        transition: opacity 0.3s, color 0.3s;
+        cursor: pointer;
+        // height: 16px;
+        width:  0.7em;
+        position: absolute;
+        left: -1em;
+        // top: 0;
+        display: block;
+        opacity: 0;
+        content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 36 36'%3E%3Cpath fill='%230758ed' d='M19 4l-6 6.1 2.3 2.4 6.1-6.1a5.8 5.8 0 0 1 8.2 8.2l-6 6 2.3 2.4 6-6A9.1 9.1 0 0 0 19.1 4zM6.5 29.7a5.8 5.8 0 0 1 0-8.2l6-6-2.3-2.4-6 6a9 9 0 0 0 0 13 9.1 9.1 0 0 0 12.8 0l6.1-6.1-2.3-2.4-6.1 6.1a5.8 5.8 0 0 1-8.2 0zm6.1-3.8l13.3-13.3-2.3-2.3-13.3 13.3 2.3 2.3z'/%3E%3C/svg%3E");
+        // transform-origin: 40%;
+        // margin-left: -1.8rem;
+        // padding-left: 1.8rem;
+    }
+    &:hover {
+        color: black;
+        &::before {
+            opacity: 0.8;
+            // fill: $color_blue;
+        }
+    }
+}
