--- a/source/innovation/series/2019-predictions/index.html.slim
+++ b/source/innovation/series/2019-predictions/index.html.slim
@@ -1,21 +1,13 @@
 ---
 layout: basic
 ogType: article
+customCSS: "series-detail"
 ---
 ruby:
   # This template is currently designed just for blog entries. - AW
   series = data.site.collections.to_a.select { |id, entry | (id == "4J4i2RsfnFJu7fDYA8XjTi") }
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/2aPhdyH76MiQwqQq4KiGMg/186518b5a3896994d54ae3cef4fbac8d/cta-compliance-share.jpg"
-scss:
-  .art-bg-fill {
-    width: 100%;
-    height: 100%;
-    opacity: 0.5;
-  }
-  .gradient-dusk {
-    background: linear-gradient(180deg, #262936 0%, #465365 23.05%, #43606B 69.96%, #5B515C 83.54%, #544745 94.86%);
-  }
 - series.each do | id, collection |
   - current_page.data.title = collection.title + ' | Datica'
   - current_page.data.summary = (collection.has_key?("summary") ? collection.summary : 'A curated collection of writing from our Datica experts.')
@@ -25,12 +17,12 @@ scss:
     .z-0.absolute.art-bg-fill.container-image--center.lozad.img-mix-multiply data-background-image="#{bg_image}?w=1200&h=1200"
     .container-color--tint-20.faded-max.group.relative.z-10
       = partial "partials/head/header", :locals => { :style => "light" }
-    section.section-article--lg.z-10.relative
+    section.section-article--lg.z-5.relative
       .row.align-center.group--2x
         .columns.small-12.large-6.text-center
           - if collection.has_key?("icon_slug")
             = inline_svg(collection.icon_slug, :class => "icon-size--xlarge")
-          h1.headline-2 = collection.title
+          h1.headline-2.text-serif = collection.title
           h4.headline-4 = (collection.has_key?("subhead") ? collection.subhead : nil)
       .row.align-center
         .columns.small-12.medium-large-6.large-4
