--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -1,6 +1,6 @@
-html { // https://caniuse.com/#search=scroll-behavior - worth trimming the JS
-    scroll-behavior: smooth;
-}
+// html { // https://caniuse.com/#search=scroll-behavior - worth trimming the JS
+//     scroll-behavior: smooth;
+// }
 // Max width on iFrames
 @include breakpoint (medium) { // not sure this is needed
     iframe {max-width: 100%;height: auto;}
