text color, hiding detail from robots.

--- a/source/innovation/series/2019-predictions/view/index.html.slim
+++ b/source/innovation/series/2019-predictions/view/index.html.slim
@@ -2,6 +2,7 @@
 layout: basic
 ogType: article
 customCSS: "series-detail"
+hide_from_sitemap: true
 ---
 ruby:
   # This template is currently designed just for blog entries. - AW
